# ign_dog

./: .gitignore  CLAUDE.md  README.md  frames_2026-05-20_16.49.34.gv
ign_models/agibot_d1_top_description/meshes/: camera.STL
ign_models/agibot_d1_top_description/urdf/: edu.urdf  top.urdf
map/: local_map.pgm  local_map.yaml
src/FAST_LIO/config/: ign_d1.yaml
src/FAST_LIO/launch/: mapping.launch.py
src/champ/champ_base/config/ekf/: base_to_footprint.yaml  footprint_to_odom.yaml
src/champ/champ_base/include/: state_estimation.h
src/champ/champ_base/src/: state_estimation.cpp
src/champ/champ_bringup/launch/: bringup.launch.py
src/edu_config/: CMakeLists.txt  package.xml
src/edu_config/config/gait/: gait.yaml
src/edu_config/config/joints/: joints.yaml
src/edu_config/config/links/: links.yaml
src/edu_config/config/ros_control/: ros_control.yaml
src/edu_config/launch/: gazebo.launch.py
src/nav2/pub_nav_goal/: CMakeLists.txt  package.xml
src/nav2/pub_nav_goal/src/: pub_point.cpp
src/nav2/sim_navigation2/: CMakeLists.txt  package.xml
src/nav2/sim_navigation2/bts/: nav2_pose.xml  nav2_poses.xml
src/nav2/sim_navigation2/launch/: nav2_bringup.launch.py  nav2_local_map.launch.py  nav2_online_map.launch.py
src/nav2/sim_navigation2/params/: amcl.yaml  behavior_server.yaml  bt.yaml  control_server.yaml  global_costmap.yaml  local_costmap.yaml  map_server.yaml  planner_server.yaml  smoother_server.yaml  velocity_smmother.yaml
src/sim_dog/agibot_d1_top_description/: CMakeLists.txt  package.xml
src/sim_dog/agibot_d1_top_description/launch/: edu_top_des.launch.py  edu_top_des_for_photo.launch.py  sim_display_launch.py
src/sim_dog/agibot_d1_top_description/meshes/: base_link_top.STL  laser.STL
src/sim_dog/agibot_d1_top_description/urdf/: edu.urdf  edu_top.urdf.xacro  top.urdf
src/sim_dog/edu_description/: CMakeLists.txt  README.md  package.xml
src/sim_dog/edu_description/launch/: display.launch  display_launch.py  gazebo.launch  sim_display_launch.py
src/sim_dog/edu_description/meshes/: laser.STL
src/sim_dog/edu_description/urdf/: edu.csv  edu.urdf  edu_test.urdf  resource.urdf
src/sim_dog/sim_ign_dog/: CMakeLists.txt  package.xml
src/sim_dog/sim_ign_dog/config/: d1_controllers.yaml  go2_controllers.yaml
src/sim_dog/sim_ign_dog/launch/: d1_gazebo_sim_dog.launch.py  d1_gazebo_sim_dog_nav2_local.launch.py  d1_gazebo_sim_dog_nav2_online.launch.py
src/sim_dog/sim_ign_dog/rviz/: d1_ign_dog.rviz  d1_nav2.rviz
src/sim_dog/sim_ign_dog/world/: house.sdf  house_add.sdf  slam_house.sdf
src/slam/amcl_server/: CMakeLists.txt  package.xml
src/slam/amcl_server/launch/: amcl_server.launch.py
src/slam/amcl_server/params/: amcl.yaml
src/slam/local_map/: CMakeLists.txt  README.md  package.xml
src/slam/local_map/launch/: map_save.launch.py  map_server.launch.py
src/slam/local_map/params/: map_saver.yaml  map_server.yaml
src/slam/pointcloud_to_laserscan/: CMakeLists.txt  README.md  package.xml
src/slam/pointcloud_to_laserscan/launch/: pointcloud_to_laserscan.launch.py
src/slam/pointcloud_to_laserscan/params/: pointcloud_to_laserscan.yaml
src/slam/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
src/slam/scan_box_filter/: CMakeLists.txt  README.md  package.xml
src/slam/scan_box_filter/launch/: scan_box_filter.launch.py
src/slam/scan_box_filter/params/: scan_box_filter.yaml
src/slam/scan_box_filter/scripts/: scan_box_filter_marker.py
src/slam/slam_cartographer/: CMakeLists.txt  package.xml
src/slam/slam_cartographer/launch/: sim_cartographer.launch.py  sim_cartographer_3d.launch.py
src/slam/slam_cartographer/params/: dog.lua  dog_3d.lua
(+2 files in other folders)
